changed httpurlconnection usage to HttpClient. Due to following reasons: for the site http://httpforever.com/ the httpurlconnection method added an additional header as Content-Length. but the length and the actual data is not a match. Actually the content is sreturned as Transfer-encoding :chunked from the server. Currently don't know how to handle this. So switched to HttpClient Which will not add any additional header.