@@ -1,29 +1,52 @@
 package com.gintophilip.httprequest.executor;
 
-import com.gintophilip.HttpRequest;
-
-import java.io.BufferedReader;
-import java.io.InputStream;
-import java.io.InputStreamReader;
-import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.net.http.HttpHeaders;
 import java.util.List;
 import java.util.Map;
 
 public class HttpRequestExecutor {
 
-    public String executeRequest(HttpRequest request) {
+    private final HttpClient client;
+
+    public HttpRequestExecutor() {
+        this.client = HttpClient.newHttpClient();
+    }
+
+    public String executeRequest(com.gintophilip.httprequest.requestparser.HttpRequest requestWrapper) {
         StringBuilder rawResponse = new StringBuilder();
 
         try {
-            URL url = new URL(request.path);
-            HttpURLConnection connection = (HttpURLConnection) url.openConnection();
-            connection.setRequestMethod(request.method.toUpperCase());
+            HttpRequest.Builder builder = HttpRequest.newBuilder()
+                    .uri(URI.create(requestWrapper.path));
 
-            // ---- Status Line ----
-            int statusCode = connection.getResponseCode();
-            String statusMessage = connection.getResponseMessage();
-            String protocol = "HTTP/1.1";
+            switch (requestWrapper.method.toUpperCase()) {
+                case "GET":
+                    builder.GET();
+                    break;
+                case "POST":
+                    builder.POST(HttpRequest.BodyPublishers.ofString(requestWrapper.body));
+                    break;
+                case "PUT":
+                    builder.PUT(HttpRequest.BodyPublishers.ofString(requestWrapper.body));
+                    break;
+                case "DELETE":
+                    builder.DELETE();
+                    break;
+                default:
+                    throw new UnsupportedOperationException("Unsupported method: " + requestWrapper.method);
+            }
+
+            HttpRequest request = builder.build();
+
+            HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+
+            int statusCode = response.statusCode();
+            String protocol = "HTTP/1.1"; // Java HttpClient doesn’t expose version easily
+            String statusMessage = ""; // Not available in Java HttpClient directly
 
             rawResponse.append(protocol)
                     .append(" ")
@@ -31,42 +54,21 @@ public class HttpRequestExecutor {
                     .append(" ")
                     .append(statusMessage)
                     .append("\r\n");
-
-            Map<String, List<String>> headers = connection.getHeaderFields();
-            for (Map.Entry<String, List<String>> entry : headers.entrySet()) {
-                String key = entry.getKey();
+            HttpHeaders headers = response.headers();
+            for (Map.Entry<String, List<String>> entry : headers.map().entrySet()) {
                 for (String value : entry.getValue()) {
-                    if (key != null) {
-                        rawResponse.append(key).append(": ").append(value).append("\r\n");
-                    } else {
-
-                    }
+                    rawResponse.append(entry.getKey()).append(": ").append(value).append("\r\n");
                 }
             }
-
             rawResponse.append("\r\n");
-            InputStream inputStream;
-            if (statusCode >= 400) {
-                inputStream = connection.getErrorStream();
-            } else {
-                inputStream = connection.getInputStream();
-            }
-
-            if (inputStream != null) {
-                BufferedReader reader = new BufferedReader(new InputStreamReader(inputStream));
-                String line;
-                while ((line = reader.readLine()) != null) {
-                    rawResponse.append(line).append("\n");
-                }
-                reader.close();
-            }
-            connection.disconnect();
+            rawResponse.append(response.body());
 
         } catch (Exception e) {
             e.printStackTrace();
             rawResponse.append("Error: ").append(e.getMessage());
         }
-        return rawResponse.toString();
 
+        return rawResponse.toString();
     }
+
 }
